--- a/Chp19Challenge/hosts.ini
+++ b/Chp19Challenge/hosts.ini
@@ -33,8 +33,8 @@ spine[1:3]-DC2
 leaf[1:4]-DC2
 borderleaf[1:2]-DC2
 [odd]
-leaf[1:4:2]
-borderleaf[1]
+leaf[1:4:2]-DC[1:2]
+borderleaf1-DC[1:2]
 [even]
-leaf[0:4:2]
-borderleaf[2]
+leaf[2:4:2]-DC[1:2]
+borderleaf2-DC[1:2]
