--- a/Chp19Challenge/playbooks/mlag_even.yml
+++ b/Chp19Challenge/playbooks/mlag_even.yml
@@ -1,4 +1,4 @@
-- hosts: odd
+- hosts: even
   gather_facts: no
   tasks:
     - name: Add interfaces to port-channel
@@ -29,6 +29,6 @@
         lines:
           -  mlag
           -    local-interface vlan 4094
-          -    peer-address 192.168.255.2
+          -    peer-address 192.168.255.1
           -    peer-link port-channel 10
           -    domain-id mlag1                 
