--- a/Chp20Challenege/configs/spine1-DC1.cfg
+++ b/Chp20Challenege/configs/spine1-DC1.cfg
@@ -1,40 +1,35 @@
 service routing protocols model multi-agent
-!!interface loopback0
+interface loopback0
    ip address 192.168.101.101/32
-!interface Ethernet2
+interface Ethernet2
    ip address 192.168.103.1/31
    no switchport
    mtu 9214
-!interface Ethernet3
+interface Ethernet3
    ip address 192.168.103.7/31
    no switchport
    mtu 9214
-!interface Ethernet4
+interface Ethernet4
    ip address 192.168.103.13/31
    no switchport
    mtu 9214
-!interface Ethernet5
+interface Ethernet5
    ip address 192.168.103.19/31
    no switchport
    mtu 9214
-!interface Ethernet6
+interface Ethernet6
    ip address 192.168.103.25/31
    no switchport
    mtu 9214
-!interface Ethernet7
+interface Ethernet7
    ip address 192.168.103.31/31
    no switchport
-   mtu 9214
-!  
-!
+   mtu 9214  
 ip prefix-list LOOPBACK seq 10 permit 192.168.101.101/32 eq 32
-!
 route-map LOOPBACK permit 10
    match ip address prefix-list LOOPBACK
-!
 peer-filter LEAF-AS-RANGE
    10 match as-range 65000-65535 result accept
-!
 router bgp 65100
    router-id 192.168.101.101
    no bgp default ipv4-unicast
@@ -45,8 +40,6 @@ router bgp 65100
    neighbor LEAF_Underlay send-community
    neighbor LEAF_Underlay maximum-routes 12000
    redistribute connected route-map LOOPBACK
-   !
    address-family ipv4
       neighbor LEAF_Underlay activate
       redistribute connected route-map LOOPBACK
-!
