--- a/Chp20Challenege/playbooks/spine1-DC1.yml
+++ b/Chp20Challenege/playbooks/spine1-DC1.yml
@@ -9,3 +9,6 @@
       template:
         src: "{{lookup('env','PWD')}}/templates/spine1_dc1.j2"
         dest: "{{lookup('env','PWD')}}/configs/{{inventory_hostname}}.cfg"
+    - name: Upload config
+      eos_config:
+        src: "{{lookup('env','PWD')}}/configs/{{inventory_hostname}}.cfg"
